[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = "나만의 ChatGPT 프로젝트"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.32.2"
langchain-core = "^0.1.30"
langchain-openai = "^0.0.8"
langchain = "^0.1.12"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
